fix: prevent nav-path layout shift with scrollbar-gutter stable

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,6 +21,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-gutter: stable; // Reserve space for scrollbar to prevent layout shift
 }
 
 body {
